# cogEng

./: .gitignore  .gitmodules  EVAL_SET_METHODOLOGY.md  EXPERIMENT_prompt_sharpening.md  README.md  VALIDATION_FINDINGS.md  VARIANCE_FINDINGS_kamau.md  cap_room_diagnostic_cases.json  extract.py  harness.py  live_responses.json  nba_sign_and_trade_tree.txt  pilot_cases.json  pyproject.toml  requirements.txt  sign_and_trade_tree.txt  template.txt
adapters/: anthropic.py  gemini.py  openai.py
audits/: coverage_vs_built.json
derive_design/: characterize_impl.py  derive_orchestrator.py  disposition_router.py  generic_orchestrator.py
docs/: AGENT_RUNTIME.md  CONTRACT.md  CURRENT_STATE.md  MAP_GOVERNANCE.md  ORCHESTRATOR_CLI.md  README_OLD.md  typed_build_decisions.md
domains/: __init__.py  voices.py
experiments/: execute_study.sh
logic_tests/: pa_domain_tests.py  propositional_tests.py
pa_full/: analyze_kamau_variance.py  analyze_variance.py  case_loader.py  inspect_kamau.py  pa_appeal_tree.json  pa_appeal_tree_sharpened.json  project_policy.py  run_achebe.py  run_cases.py  run_kamau_n_times.py  run_variance.py  sharpen_prompts.py
rulekit/: __init__.py  runtime.py  schema.py
rulekit_session_2026_05_21/: SESSION_HANDOFF_2026-05-21.md  START_HERE.md  build.py  evaluation_output.txt  run_cases_legacy.py  smoke_test.py  stability_test.py  test_built.py
rulekit_session_2026_05_22/: ARCHITECTURE.md  PROTOCOL.md  RuleKit_Architecture.docx  a1_audit.json  build_dag.py  eval_bundle.py  evaluate_built.py  init_bundle.py  inspect_built.py  run_cases.py  seed_bundle.py  sensitivity.py  test_a1.py
runs/: cross_provider.json
scripts/: run_tier1_multi_provider.ps1
tests/: test_binary_variadic_arithmetic.py  test_binary_variadic_spec.py  test_build_state_dir.py  test_clusterer.py  test_conditional_numeric.py  test_connected_clusterer.py  test_contract_convert.py  test_contract_smoke.py  test_engine_boolean.py  test_engine_typed.py  test_extract.py  test_fcba_refined_round_trip.py  test_finalize_spec.py  test_llm_caller.py  test_map_typed.py  test_nba_fragments.py  test_nba_live_dry_run.py  test_piece7_nba_section_build.py  test_pieces_1_and_2_live.py  test_runtime_runner.py  (+3 more)
(+2798 files in other folders)
